Adding endpoint to send friend request
