# services/user/internal/datastruct/common.go
@@ -1,0 +1,5 @@
+package datastruct
+
+type MessageRes struct {
+	Message string `json:"message" validate:"required"`
+}
