# services/user/internal/handlers/update_user.go
@@ -17,7 +17,7 @@ import (
 // @Accept json
 // @Produce json
 // @Param Body body datastruct.RequestUser true "The body to create a thing"
-// @Success 201 {object} datastruct.PublicUser
+// @Success 200 {object} datastruct.PublicUser
 // @Failure 400 {object} echo.HTTPError
 // @Router /{id} [patch]
 func (a *httpApp) UpdateUser(c echo.Context) error {
